<resources>
    <string name="app_name">景区导览</string>
    <string name="country">国家概览</string>
    <string name="hot_city">热门城市</string>
    <string name="spot">景点</string>
    <string name="search_hint">国家、城市、景点名称</string>
    <string name="cancle">取消</string>
    <string name="hot">热门</string>
    <string name="more">展开更多</string>
    <string name="asia">亚洲</string>
    <string name="europe">欧洲</string>
    <string name="africa">非洲</string>
    <string name="NorthAmerica">北美洲</string>
    <string name="SouthAmerica">南美洲</string>
    <string name="Oceania">大洋洲</string>
    <string name="destination">目的地</string>
    <string name="no_data">目前没有相关数据哦~</string>
    <string name="load_more">正在加载...</string>
    <string name="clear_history">清除历史</string>
    <string name="lastest_searches">最近搜索</string>
    <string name="hot_destinations">热门目的地</string>
    <string name="launcher">听见这个世界</string>


    <!--toast-->
    <string name="loading">正在加载...</string>
    <string name="net_unavailable">网络不可用！</string>
    <string name="try_again">服务器出现异常，请稍后重试！</string>
    <string name="no_more">没有更多数据了</string>
    <string name="n_explain">处景区讲解</string>
    <string name="contain">内含</string>
    <string name="fail_path">很抱歉，播放路径错误！</string>

    <string name="down_meijing">欢迎手机下载美景听听APP</string>
    <string name="dialog_content">请去解压文件！</string>
    <string name="cont_use">取消</string>
    <string name="conn_net">立即前往</string>
    <string name="download">有离线包快去下载吧！</string>
</resources>
