<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.SearchView
    android:id="@+id/sv_search"
    android:layout_width="@dimen/px_432"
    android:layout_height="@dimen/px_65"
    android:layout_marginLeft="@dimen/px_20"
    android:layout_marginTop="@dimen/px_12"
    android:background="@drawable/bg_search"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.SearchView>
    <TextView
    android:id="@+id/tv_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cancle"
    android:textSize="@dimen/px_24"
    android:textColor="#0a0a0a"
    app:layout_constraintTop_toTopOf="@id/sv_search"
    app:layout_constraintBottom_toBottomOf="@id/sv_search"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toRightOf="@id/sv_search"
    />
    <TextView
    android:id="@+id/tv_recent_search"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/px_25"
    android:layout_marginBottom="@dimen/px_25"
    android:layout_marginLeft="@dimen/px_20"
    android:text="@string/lastest_searches"
    android:textSize="24px"
    android:textColor="#b7b7b7"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/sv_search"
    app:layout_constraintBottom_toTopOf="@id/view1"/>
    <TextView
    android:id="@+id/tv_clear_history"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/clear_history"
    android:textColor="#eb5b4e"
    android:textSize="@dimen/px_24"

    android:layout_marginRight="@dimen/px_20"
    app:layout_constraintTop_toBottomOf="@id/sv_search"
    android:layout_marginTop="@dimen/px_25"

    app:layout_constraintRight_toRightOf="parent"/>
    <View
    android:id="@+id/view1"
    android:layout_width="0pt"
    android:layout_height="@dimen/px_1"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="@dimen/px_25"
    app:layout_constraintTop_toBottomOf="@id/tv_recent_search"
    android:background="#e3e3e3"/>
    <android.support.v7.widget.RecyclerView
    android:id="@+id/rv_record"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/view1"></android.support.v7.widget.RecyclerView>
    <View
    android:id="@+id/view2"
    android:layout_width="0pt"
    android:layout_height="@dimen/px_12"
    android:background="#e9e9e9"
    app:layout_constraintTop_toBottomOf="@id/rv_record"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

    <TextView
    android:id="@+id/tv_hot_destination"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/hot_destinations"
    android:textSize="@dimen/px_24"
    android:textColor="#b7b7b7"
    android:layout_marginTop="@dimen/px_25"
    android:layout_marginLeft="@dimen/px_20"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/view2"
    />
    <View
    android:id="@+id/view3"
    android:layout_width="0pt"
    android:layout_height="@dimen/px_1"
    android:layout_marginTop="@dimen/px_25"
    android:background="#e3e3e3"
    app:layout_constraintTop_toBottomOf="@id/tv_hot_destination"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />
    <android.support.v7.widget.RecyclerView
    android:id="@+id/rv_hot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/view3"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"></android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>